# mtd

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: themes.md
examples/: template.md
mtd/: __init__.py  __main__.py  api.py  cli.py  models.py  parser.py  server.py
mtd/themes/: __init__.py  engine.py
mtd/themes/builtins/: academic.yaml  default.yaml  modern.yaml
mtd/writers/: docx_writer.py  odt_writer.py
tests/: test_api.py  test_cli.py  test_parser.py  test_themes.py  test_titlepage.py  test_writers.py
tests/coverage/: test_api_cov.py  test_cli_cov.py  test_docx_cov.py  test_odt_cov.py  test_parser_cov.py  test_themes_cov.py
